--- a/doc/latex/Instances/ConcurrentMonad.tex
+++ b/doc/latex/Instances/ConcurrentMonad.tex
@@ -2773,7 +2773,7 @@
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Structures.ConcurrentMonad}\AgdaSpace{}%
 \AgdaKeyword{hiding}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{unit}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{unit}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{merge}\AgdaSymbol{)}\<%
 \\
 %
@@ -2818,9 +2818,6 @@
 \\
 %
 \>[18]\AgdaFunction{bind-assoc}\<%
-\\
-%
-\>[18]\AgdaFunction{unit}\<%
 \\
 %
 \>[18]\AgdaFunction{merge}\<%
