--- a/doc/latex/Structures/ConcurrentMonad.tex
+++ b/doc/latex/Structures/ConcurrentMonad.tex
@@ -265,12 +265,25 @@
 \AgdaBound{g}\AgdaSymbol{))}\<%
 \\
 %
-\>[4]\AgdaField{unit}%
-\>[14]\AgdaSymbol{:}\AgdaSpace{}%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{unit}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaRecord{⊤}\<%
 \\
 %
+\>[2]\AgdaFunction{unit}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaField{return}\AgdaSpace{}%
+\AgdaInductiveConstructor{tt}\<%
+\\
+\>[0]\<%
+\\
+%
+\>[2]\AgdaKeyword{field}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaField{merge}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
@@ -294,7 +307,7 @@
 \>[4]\AgdaField{mcomp≲ₘ}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[211I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[214I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -319,7 +332,7 @@
 \AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
 \AgdaBound{b₂}\<%
 \\
-\>[.][@{}l@{}]\<[211I]%
+\>[.][@{}l@{}]\<[214I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a₁}\AgdaSpace{}%
@@ -333,7 +346,7 @@
 \>[4]\AgdaField{idr}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[243I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[246I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -342,11 +355,11 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[243I]%
+\>[.][@{}l@{}]\<[246I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
-\AgdaField{unit}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaFunction{unit}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
@@ -362,7 +375,7 @@
 \>[4]\AgdaField{idl}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[265I]\AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
+\>[268I]\AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -371,10 +384,10 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[265I]%
+\>[.][@{}l@{}]\<[268I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
-\AgdaField{unit}\AgdaSpace{}%
+\AgdaFunction{unit}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
@@ -391,7 +404,7 @@
 \>[4]\AgdaField{assoc}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[287I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[290I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -410,7 +423,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[287I]%
+\>[.][@{}l@{}]\<[290I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
@@ -424,7 +437,7 @@
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}%
-\>[317I]\AgdaSymbol{→}\AgdaSpace{}%
+\>[320I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaField{return}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
@@ -432,7 +445,7 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{))\}))}\<%
 \\
-\>[.][@{}l@{}]\<[317I]%
+\>[.][@{}l@{}]\<[320I]%
 \>[64]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
@@ -444,7 +457,7 @@
 \>[4]\AgdaField{comm}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[330I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[333I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -458,7 +471,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[330I]%
+\>[.][@{}l@{}]\<[333I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
@@ -482,7 +495,7 @@
 \>[4]\AgdaField{ichange}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[361I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[364I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSpace{}%
@@ -510,17 +523,17 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[361I]%
+\>[.][@{}l@{}]\<[364I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}%
-\>[390I]\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\>[393I]\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{))}\<%
 \\
-\>[.][@{}l@{}]\<[390I]%
+\>[.][@{}l@{}]\<[393I]%
 \>[30]\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
@@ -539,6 +552,10 @@
 \AgdaBound{b}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{\}))}\<%
 \\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\\[\AgdaEmptyExtraSkip]%
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
