preparo codigo sized types para arrrancar seccion 6

--- a/doc/latex/Instances/ConcurrentMonad.tex
+++ b/doc/latex/Instances/ConcurrentMonad.tex
@@ -2779,66 +2779,66 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaFunction{partiality}\AgdaSpace{}%
+\>[2]\AgdaFunction{delayConcurrent}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{ConcurrentMonad}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}⊥}}\<%
 \\
 %
-\>[2]\AgdaFunction{partiality}\AgdaSpace{}%
+\>[2]\AgdaFunction{delayConcurrent}\AgdaSpace{}%
 \AgdaSymbol{=}%
 \>[1965I]\AgdaInductiveConstructor{makeConcurrentMonad}\<%
 \\
 \>[1965I][@{}l@{\AgdaIndent{0}}]%
-\>[18]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅⊥\AgdaUnderscore{}}}\<%
+\>[22]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅⊥\AgdaUnderscore{}}}\<%
 \\
 %
-\>[18]\AgdaFunction{eq≅⊥}\<%
+\>[22]\AgdaFunction{eq≅⊥}\<%
 \\
 %
-\>[18]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≲⊥\AgdaUnderscore{}}}\<%
+\>[22]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≲⊥\AgdaUnderscore{}}}\<%
 \\
 %
-\>[18]\AgdaFunction{porder≲⊥}\<%
+\>[22]\AgdaFunction{porder≲⊥}\<%
 \\
 %
-\>[18]\AgdaInductiveConstructor{now}\<%
+\>[22]\AgdaInductiveConstructor{now}\<%
 \\
 %
-\>[18]\AgdaFunction{bind}\<%
+\>[22]\AgdaFunction{bind}\<%
 \\
 %
-\>[18]\AgdaFunction{bind-comp}\<%
+\>[22]\AgdaFunction{bind-comp}\<%
 \\
 %
-\>[18]\AgdaFunction{left-identity}\<%
+\>[22]\AgdaFunction{left-identity}\<%
 \\
 %
-\>[18]\AgdaFunction{right-identity}\<%
+\>[22]\AgdaFunction{right-identity}\<%
 \\
 %
-\>[18]\AgdaFunction{bind-assoc}\<%
+\>[22]\AgdaFunction{bind-assoc}\<%
 \\
 %
-\>[18]\AgdaFunction{merge}\<%
+\>[22]\AgdaFunction{merge}\<%
 \\
 %
-\>[18]\AgdaFunction{merge-comp}\<%
+\>[22]\AgdaFunction{merge-comp}\<%
 \\
 %
-\>[18]\AgdaFunction{rid}\<%
+\>[22]\AgdaFunction{rid}\<%
 \\
 %
-\>[18]\AgdaFunction{lid}\<%
+\>[22]\AgdaFunction{lid}\<%
 \\
 %
-\>[18]\AgdaFunction{merge-assoc}\<%
+\>[22]\AgdaFunction{merge-assoc}\<%
 \\
 %
-\>[18]\AgdaFunction{merge-comm}\<%
+\>[22]\AgdaFunction{merge-comm}\<%
 \\
 %
-\>[18]\AgdaSymbol{\{!   !\}}\<%
+\>[22]\AgdaSymbol{\{!   !\}}\<%
 \end{code}
 %</instance> 
 
