--- a/doc/latex/Structures/ConcurrentMonoid.tex
+++ b/doc/latex/Structures/ConcurrentMonoid.tex
@@ -1,4 +1,11 @@
 \begin{code}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
+\AgdaKeyword{OPTIONS}\AgdaSpace{}%
+\AgdaPragma{--without-K}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Structures.ConcurrentMonoid}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
@@ -267,7 +274,7 @@
 %
 \>[4]\AgdaField{ichange}%
 \>[13]\AgdaSymbol{:}%
-\>[177I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\>[180I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
@@ -280,7 +287,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\<%
 \\
-\>[177I][@{}l@{\AgdaIndent{0}}]%
+\>[180I][@{}l@{\AgdaIndent{0}}]%
 \>[16]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
