--- a/doc/sty/unicode.sty
+++ b/doc/sty/unicode.sty
@@ -3,6 +3,8 @@
 \DeclareUnicodeCharacter{8344}{\ensuremath{_{m}}}
 \DeclareUnicodeCharacter{8799}{\ensuremath{\stackrel{?}{=}}}
 \DeclareUnicodeCharacter{737}{\ensuremath{^l}}
+\DeclareUnicodeCharacter{8988}{\ensuremath{\ulcorner}}
+\DeclareUnicodeCharacter{8989}{\ensuremath{\urcorner}}
 
 \newcommand{\texteta}{\ensuremath{\eta}}
 \newcommand{\textalpha}{\ensuremath{\alpha}}
