--- a/doc/tex/casodelay.tex
+++ b/doc/tex/casodelay.tex
@@ -379,7 +379,33 @@ Dada la dificultad de reconocimiento de términos iguales y el problema con el c
 
 \subsection{Definición de los conaturales utilizando \textit{sized types}}
 
+\ExecuteMetaData[latex/CoNaturalsS.tex]{conat}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{pred}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{natconat}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{igualdad}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{propseq}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{orden}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{propsorden}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{reflorden}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{menorsuc}
+\ExecuteMetaData[latex/CoNaturalsS.tex]{predmenor}
+
 \subsection{Prueba de que los conaturales forman un monoide concurrente}
+
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{suma}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{propsuma}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{commsuma}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{congsuma}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{monosuma}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{max}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{idsmax}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{congmax}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{monomax}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{assocmax}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{commmax}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{interchange}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{eqpartial}
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{instance}
 
 \subsection{Prueba alternativa de que \textit{delay} es una mónada concurrente}
 
