--- a/doc/tex/introduccion.tex
+++ b/doc/tex/introduccion.tex
@@ -1,1 +1,7 @@
-Intro
+\chapter{Introducción}
+
+\section{Motivación y estado del arte} 
+
+\section{Objetivos del trabajo}
+
+\section{Estructura de la tesina}
